--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,12 +1,25 @@
-.movie {
-  display: flex;
-  padding-top: 5vh;
-}
-
-.details {
-  padding-left: 30px;
-}
-
 .seasons {
   padding-top: 20vh;
+}
+
+@media only screen and (min-width: 600px) {
+  .movie {
+    display: flex;
+    padding-top: 5vh;
+  }
+
+  .details {
+    padding-left: 30px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .movie {
+    padding-top: 5vh;
+  }
+
+  .details {
+    padding-top: 30px;
+    padding-left: 20px;
+  }
 }
